new resume added.

--- a/index.html
+++ b/index.html
@@ -212,15 +212,19 @@
                                 </div>
                             </div>
                             <div class="category">
-                                <h3>Other Skills</h3>
+                                <h3>Ai & Ml</h3>
                                 <div class="tags">
                                     <div class="tag">Scikit-learn</div>
+                                    <div class="tag">Tensorflow</div>
+                                </div>
+                            </div>
+                            <div class="category">
+                                <h3>Other Skills</h3>
+                                <div class="tags">
                                     <div class="tag">Solidity</div>
                                     <div class="tag">Bash scripting</div>
-                                    <div class="tag">React Native</div>
                                     <div class="tag">Git</div>
                                     <div class="tag">Linux</div>
-                                    <div class="tag">WordPress</div>
                                     <div class="tag">VPS</div>
                                     <div class="tag">AWS</div>
                                 </div>
@@ -312,20 +316,7 @@
                                     <div class="arrow">
                                         <i class="fa fa-chevron-down"></i>
                                     </div>
-                                </div>
-                                <div class="divider"></div>
-                                <div class="item" onclick="goto('https://github.com/xtrimDev/csv-to-api')">
-                                    <div class="icon">
-                                        <i class="fa-solid fa-file-excel"></i>
-                                    </div>
-                                    <div class="text">
-                                        <p class="title">CSV TO API</p>
-                                        <p class="used">Use your CSV data as a api response.</p>
-                                    </div>
-                                    <div class="arrow">
-                                        <i class="fa fa-chevron-down"></i>
-                                    </div>
-                                </div>
+                                </div>                                
                                 <div class="divider"></div>
                                 <div class="item" onclick="goto('https://github.com/xtrimDev/Dijkstra-implemetation')">
                                     <div class="icon">
@@ -347,6 +338,19 @@
                                     <div class="text">
                                         <p class="title">Paint app</p>
                                         <p class="used">Draw anything and save it as image.</p>
+                                    </div>
+                                    <div class="arrow">
+                                        <i class="fa fa-chevron-down"></i>
+                                    </div>
+                                </div>
+                                <div class="divider"></div>
+                                <div class="item" onclick="goto('https://github.com/xtrimDev')">
+                                    <div class="icon">
+                                        <i class="fa-brands fa-github"></i>
+                                    </div>
+                                    <div class="text">
+                                        <p class="title">More</p>
+                                        <p class="used">View my all public projects on github.</p>
                                     </div>
                                     <div class="arrow">
                                         <i class="fa fa-chevron-down"></i>
