Update profile information and skills section
Removed 'blockchain' from the about section and updated education dates. Adjusted skills categories and added 'NLP' and 'Docker' to the skills list.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="profile">
                 <div class="portfolio">
                     <h1 class="author">Sameer singh bhandari</h1>
-                    <p class="about">MERN Stack & ML Developer | Blockchain & Cybersecurity Enthusiast</p>
+                    <p class="about">MERN Stack & ML Developer | Cybersecurity Enthusiast</p>
                 </div>
                 <div class="contact">
                     <div class="social">
@@ -109,9 +109,9 @@
                     </div>
                     <p class="indentation">As a Full Stack Web and ML Developer, skilled in MERN, PHP, MySQL, Python,
                         and Scikit-learn I create dynamic web applications with a focus on seamless user experiences.
-                        Currently, I’m expanding my expertise into <b>Cyber Security</b> and <b>blockchain</b>
-                        technology. My commitment to agile methodologies and continuous learning drives my passion for
-                        delivering innovative solutions. Let’s collaborate to bring your digital ideas to life!</p>
+                        Currently, I’m expanding my expertise into <b>Cyber Security</b>
+                        field. My commitment to agile methodologies and continuous learning drives my passion for
+                        delivering innovative solutions.</p>
                 </div>
                 <div class="box">
                     <div class="sticky">
@@ -132,7 +132,7 @@
                         <div class="details">
                             <div class="title">Intermediate , From <a href="https://ubse.uk.gov.in/" class="from"
                                     target="_blank">UBSE.</a></div>
-                            <div class="date"><span class="from">2021</span><span class="to">2023</span></div>
+                            <div class="date"><span class="from">2022</span><span class="to">2023</span></div>
                         </div>
                     </div>
                     <div class="divider"></div>
@@ -141,7 +141,7 @@
                         <div class="details">
                             <div class="title">High School , From <a href="https://ubse.uk.gov.in/" class="from"
                                     target="_blank">UBSE.</a></div>
-                            <div class="date"><span class="from">2019</span><span class="to">2021</span></div>
+                            <div class="date"><span class="from">2019</span><span class="to">2020</span></div>
                         </div>
                     </div>
                     <div class="divider"></div>
@@ -162,68 +162,67 @@
                         <h1 class="heading">Skills</h1>
                     </div>
                     <div class="skills-section">
-                            <div class="category">
-                                <h3>Frontend</h3>
-                                <div class="tags">
-                                    <div class="tag">HTML</div>
-                                    <div class="tag">CSS</div>
-                                    <div class="tag">JavaScript</div>
-                                    <div class="tag">TypeScript</div>
-                                    <div class="tag">Bootstrap</div>
-                                    <div class="tag">React</div>
-                                    <div class="tag">Next JS</div>
-                                    <div class="tag">Tailwind CSS</div>
-                                </div>
-                            </div>
-                            <div class="category">
-                                <h3>Backend</h3>
-                                <div class="tags">
-                                    <div class="tag">Node</div>
-                                    <div class="tag">Express</div>
-                                    <div class="tag">REST API</div>
-                                    <div class="tag">JWT/OAuth</div>
-                                    <div class="tag">PHP</div>
-                                    <div class="tag">Flask</div>
-                                </div>
-                            </div>
-                            <div class="category">
-                                <h3>Databases</h3>
-                                <div class="tags">
-                                    <div class="tag">MySQL</div>
-                                    <div class="tag">Mongo DB</div>
-                                    <div class="tag">Postgres</div>
-                                    <div class="tag">SQLite</div>
-                                </div>
-                            </div> 
-                            <div class="category">
-                                <h3>Programming</h3>
-                                <div class="tags">
-                                    <div class="tag">C</div>
-                                    <div class="tag">C++</div>
-                                    <div class="tag">Python</div>
-                                    <div class="tag">JAVA</div>
-                                    <div class="tag">PHP</div>
-                                </div>
-                            </div>
-                            <div class="category">
-                                <h3>Ai & Ml</h3>
-                                <div class="tags">
-                                    <div class="tag">Scikit-learn</div>
-                                    <div class="tag">Tensorflow</div>
-                                </div>
-                            </div>
-                            <div class="category">
-                                <h3>Other Skills</h3>
-                                <div class="tags">
-                                    <div class="tag">Solidity</div>
-                                    <div class="tag">Bash scripting</div>
-                                    <div class="tag">Git</div>
-                                    <div class="tag">Linux</div>
-                                    <div class="tag">VPS</div>
-                                    <div class="tag">AWS</div>
-                                </div>
+                        <div class="category">
+                            <h3>Frontend</h3>
+                            <div class="tags">
+                                <div class="tag">HTML</div>
+                                <div class="tag">CSS</div>
+                                <div class="tag">JavaScript</div>
+                                <div class="tag">React</div>
+                                <div class="tag">Next JS</div>
+                                <div class="tag">Tailwind CSS</div>
                             </div>
                         </div>
+                        <div class="category">
+                            <h3>Backend</h3>
+                            <div class="tags">
+                                <div class="tag">Node</div>
+                                <div class="tag">Express</div>
+                                <div class="tag">REST API</div>
+                                <div class="tag">JWT/OAuth</div>
+                                <div class="tag">PHP</div>
+                                <div class="tag">Flask</div>
+                            </div>
+                        </div>
+                        <div class="category">
+                            <h3>Databases</h3>
+                            <div class="tags">
+                                <div class="tag">MySQL</div>
+                                <div class="tag">Mongo DB</div>
+                                <div class="tag">Postgres</div>
+                                <div class="tag">SQLite</div>
+                            </div>
+                        </div> 
+                        <div class="category">
+                            <h3>Programming</h3>
+                            <div class="tags">
+                                <div class="tag">C</div>
+                                <div class="tag">C++</div>
+                                <div class="tag">Python</div>
+                                <div class="tag">JAVA</div>
+                                <div class="tag">PHP</div>
+                            </div>
+                        </div>
+                        <div class="category">
+                            <h3>Ai & Ml</h3>
+                            <div class="tags">
+                                <div class="tag">Scikit-learn</div>
+                                <div class="tag">Tensorflow</div>
+                                <div class="tag">NLP</div>
+                                <div class="tag">N8N</div>
+                            </div>
+                        </div>
+                        <div class="category">
+                            <h3>Other Skills</h3>
+                            <div class="tags">
+                                <div class="tag">Git</div>
+                                <div class="tag">Linux</div>
+                                <div class="tag">Bash scripting</div>
+                                <div class="tag">Docker</div>
+                                <div class="tag">AWS</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="content" id="project">
