Update images, favicon, and project listings
Replaced JPEG images and favicon with PNG/JPG formats for better compatibility and optimization. Updated project showcase in index.html to reflect new and reordered projects, removed deprecated projects, and adjusted skill categories. Modified CSS for improved image display and layout responsiveness.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js" defer></script>
     <script src="https://unpkg.com/pdfobject@2.2.12/pdfobject.min.js" defer></script>
     <script src="./js/app.js" defer></script>
-    <link rel="shortcut icon" href="favicon.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         <div class="profile-box">
             <div class="profile-img">
                 <div class="gradient">
-                    <img src="./images/profile/1741261202199.jpeg" alt="Sameer singh bhandari">
+                    <img src="./images/profile/1741261202199.png" alt="Sameer singh bhandari">
                 </div>
             </div>
             <div class="profile">
@@ -213,13 +213,19 @@
                             </div>
                         </div>
                         <div class="category">
-                            <h3>Other Skills</h3>
+                            <h3>DevOps & Infrastructure</h3>
                             <div class="tags">
-                                <div class="tag">Git</div>
-                                <div class="tag">Linux</div>
-                                <div class="tag">Bash scripting</div>
                                 <div class="tag">Docker</div>
                                 <div class="tag">AWS</div>
+                                <div class="tag">Linux</div>
+                            </div>
+                            </div>
+
+                            <div class="category">
+                            <h3>Development Tools</h3>
+                            <div class="tags">
+                                <div class="tag">Git</div>
+                                <div class="tag">Bash scripting</div>
                             </div>
                         </div>
                     </div>
@@ -232,6 +238,34 @@
                     </div>
                     <div class="expose">
                         <div class="primary">
+                            <div class="card">
+                                <div class="img">
+                                    <img src="./images/project/nextGenCMS.jpg" alt="project">
+                                    <div class="action">
+                                        <button type="button" class="code" title="view code"
+                                            onclick="goto('https://github.com/xtrimDev/NextGen-CMS')"><i
+                                                class="fa fa-code"></i></button>
+                                    </div>
+                                </div>
+                                <div class="detail">
+                                    <p class="title">NextGen CMS</p>
+                                    <p class="used">AI Powered Content Management System</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="img">
+                                    <img src="./images/project/cpuLoadBalancer.jpg" alt="project">
+                                    <div class="action">
+                                        <button type="button" class="code" title="view code"
+                                            onclick="goto('https://github.com/xtrimDev/CPU-Load-Balancer')"><i
+                                                class="fa fa-code"></i></button>
+                                    </div>
+                                </div>
+                                <div class="detail">
+                                    <p class="title">CPU Load Balancer</p>
+                                    <p class="used">CPU load balancing Simulator</p>
+                                </div>
+                            </div>
                             <div class="card">
                                 <div class="img">
                                     <img src="./images/project/secureScan.jpg" alt="project">
@@ -248,21 +282,7 @@
                             </div>
                             <div class="card">
                                 <div class="img">
-                                    <img src="./images/project/emailClassification.jpg" alt="project">
-                                    <div class="action">
-                                        <button type="button" class="code" title="view code"
-                                            onclick="goto('https://github.com/xtrimDev/Email-Spam-Ham-classification')"><i
-                                                class="fa fa-code"></i></button>
-                                    </div>
-                                </div>
-                                <div class="detail">
-                                    <p class="title">Email Classification</p>
-                                    <p class="used">Email spam and ham classification using Machine Learning</p>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="img">
-                                    <img src="./images/project/Notes.png" alt="project">
+                                    <img src="./images/project/xtrimNotes.jpg" alt="project">
                                     <div class="action">
                                         <button type="button" class="code" title="view code"
                                             onclick="goto('https://github.com/xtrimDev/xtrimNotes')"><i
@@ -275,23 +295,6 @@
                                 <div class="detail">
                                     <p class="title">XtrimNotes</p>
                                     <p class="used">Notes Sharing platform for students, using Nodejs and mongo db.</p>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="img">
-                                    <img src="./images/project/sharechat.png" alt="project">
-                                    <div class="action">
-                                        <button type="button" class="code" title="view code"
-                                            onclick="goto('https://github.com/xtrimDev/Sharechat')"><i
-                                                class="fa fa-code"></i></button>
-                                        <button type="button" class="code" title="view project"
-                                            onclick="goto('https://sharechat.infinityfreeapp.com/')"><i
-                                                class="fa-regular fa-eye"></i></button>
-                                    </div>
-                                </div>
-                                <div class="detail">
-                                    <p class="title">Sharechat</p>
-                                    <p class="used">A Social media web app using php and mysql.</p>
                                 </div>
                             </div>
                         </div>
