Update 'Other Projects' section with new projects
Replaced previous project links, icons, titles, and descriptions in the 'Other Projects' section with updated projects: EasyRoute, Email Classification, and LightWeb. This refreshes the showcased projects to reflect more recent or relevant work.

--- a/index.html
+++ b/index.html
@@ -301,39 +301,39 @@
                         <div class="secondary">
                             <h2 class="more">Other Projects</h2>
                             <div class="list">
-                                <div class="item" onclick="goto('https://github.com/xtrimDev/website-blocker-gui')">
+                                <div class="item" onclick="goto('https://github.com/xtrimDev/EasyRoute')">
                                     <div class="icon">
-                                        <i class="fa-solid fa-shield-halved"></i>
+                                        <i class="fa-solid fa-route"></i>
                                     </div>
                                     <div class="text">
-                                        <p class="title">Website Blocker</p>
-                                        <p class="used">Block and Unblock any website, with the GUI interface.</p>
+                                        <p class="title">EasyRoute</p>
+                                        <p class="used">Find the shortest and most efficient paths using Dijkstra.</p>
                                     </div>
                                     <div class="arrow">
                                         <i class="fa fa-chevron-down"></i>
                                     </div>
                                 </div>                                
                                 <div class="divider"></div>
-                                <div class="item" onclick="goto('https://github.com/xtrimDev/Dijkstra-implemetation')">
+                                <div class="item" onclick="goto('https://github.com/xtrimDev/Email-Spam-Ham-classification')">
                                     <div class="icon">
-                                        <i class="fa-solid fa-route"></i>
+                                        <i class="fa-regular fa-message"></i>
                                     </div>
                                     <div class="text">
-                                        <p class="title">Dijkstra Implementation</p>
-                                        <p class="used">Find the shortest path, on the given points.</p>
+                                        <p class="title">Email Classification</p>
+                                        <p class="used">Spam and ham classifier using Random forest ML Algorithm.</p>
                                     </div>
                                     <div class="arrow">
                                         <i class="fa fa-chevron-down"></i>
                                     </div>
                                 </div>
                                 <div class="divider"></div>
-                                <div class="item" onclick="goto('https://xtrimDev.github.io/paint-app/')">
+                                <div class="item" onclick="goto('https://github.com/xtrimDev/LightWeb')">
                                     <div class="icon">
                                         <i class="fa-solid fa-paint-roller"></i>
                                     </div>
                                     <div class="text">
-                                        <p class="title">Paint app</p>
-                                        <p class="used">Draw anything and save it as image.</p>
+                                        <p class="title">LightWeb</p>
+                                        <p class="used">Web Server Load Balancer intelligently distributes incoming requests across multiple backend servers.</p>
                                     </div>
                                     <div class="arrow">
                                         <i class="fa fa-chevron-down"></i>
