Replace Bento link with Beacons in social section
Removed bento.png and added beacons.png image. Updated index.html to link to beacons.ai instead of bento.me, reflecting the change in social profile.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <a href="https://twitter.com/xtrim_dev" class="fa-brands fa-x-twitter" target="blank"></a>
                         </div>
                         <div class="box">
-                            <a href="https://bento.me/xtrimdev" target="blank"><img src="/images/social/bento.png"></a>
+                            <a href="https://beacons.ai/xtrimdev" target="blank"><img src="/images/social/beacons.png"></a>
                         </div>
                     </div>
                     <div class="card">
